--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -20,7 +20,7 @@
     <ng-template #rankingList>
       <p class="rankings-message">{{mensajeRankings}}</p>
       <ul class="rankings-list">
-        <li *ngFor="let ranking of rankings">{{ranking.id}}</li>
+        <li *ngFor="let ranking of rankings">{{ranking.name}}</li>
       </ul>
     </ng-template>
 
