mods profile student

--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
@@ -1,8 +1,6 @@
-
-<div *ngIf="student">
+<!-- 
+<div class="profilecontainer">
     <h2>Perfil</h2>
-    
-
     <form>
       <div>
         <label>Nombre:</label>
@@ -23,5 +21,69 @@
       </div>
       <button type="submit" (click)="save()">Guardar</button>
     </form>
+</div> -->
+<div class="container">
+  <div class="text-center">
+    <h1>Editar Perfil</h1>
   </div>
+  <hr>
+<div class="row ">
+    <!-- left column -->
+    <div class="col-3">
+      <div class="text-center">
+        <img src="https://i.imgur.com/n6F53V0.jpg" class="avatar img-circle" alt="avatar">
+        <h6>Selecciona una foto diferente...</h6>
+        
+        <input type="file" class="form-control">
+      </div>
+    </div>
+    
+    <!-- edit form column -->
+    
+    <div class="col-md-4 personal-info ">
+      <div class="alert alert-info alert-dismissable">
+        <a class="panel-close close" data-dismiss="alert">×</a> 
+        <i class="fa fa-coffee"></i>
+        This is an <strong>.alert</strong>. Use this to show important messages to the user.
+      </div>
+      <h3>Info de tu perfil</h3>
+      
+      <form class="form-horizontal" role="form">
+        <div class="form-group">
+          <label class="col-lg-3 control-label text-center">Nombre:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="Jane">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Apellido:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="Bishop">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Email:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="janesemail@gmail.com">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-3 control-label">Username:</label>
+          <div class="col-md-8">
+            <input class="form-control" type="text" value="janeuser">
+          </div>
+        </div>
+          <div class="col-md-8">
+            <div class="buttonsavechanges">
+            <input type="button" class="btn btn-primary" value="Guardar Cambios">
+            <span></span>
+            <input type="reset" class="btn btn-danger" value="Cancelar Cambios">
+            </div>
+          </div>
+      </form>
+    </div>
+</div>
+</div>
+
   
