--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,1 +1,5 @@
-<p>ranking-page works!</p>
+<div class="container">
+    <h1>Ranking {{ rankingId }}</h1>
+    
+    <!-- otras secciones del ranking aquí -->
+  </div>
