--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,5 +1,21 @@
-<div class="container">
-    <h1>Ranking {{ rankingId }}</h1>
-    
-    <!-- otras secciones del ranking aquí -->
-  </div>
+<h2>Ranking #{{ rankingId }}</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>Posición</th>
+      <th>Nombre</th>
+      <th>Puntuación</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let analysis of rankingAnalises; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ analysis.id_student }}</td>
+      <td>{{ analysis.points }}</td>
+    </tr>
+  </tbody>
+</table>
+
+<div *ngIf="!rankingAnalises">Cargando...</div>
+<div *ngIf="!rankingAnalises">No se encontraron datos del ranking.</div>
