--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-student/login-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-student/login-student.component.html
@@ -5,7 +5,7 @@
         <div class="form-row">
           <label class="form-row-inner">
             <mat-form-field style="width:100%">
-              <input matInput type="text" name="your_email_1" id="your_email_1" class="input-text" required
+              <input  type="text" name="your_email_1" id="your_email_1" class="input-text" required
                 formControlName="email">
               <mat-error>
                 Email es requerido Por favor, ingrese un email válido
