--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-teacher/login-teacher.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-teacher/login-teacher.component.css
@@ -278,3 +278,16 @@
 .mat-erroremail{
 	margin-top: 0px;
 }
+
+/* Cambiar cuando se auto rellena con chrome*/
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+	-webkit-box-shadow: 0 0 0 30px #3d5983 inset !important;
+}
+
+/*Change text in autofill textbox*/
+input:-webkit-autofill{
+	-webkit-text-fill-color: white !important;
+}
