--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
@@ -59,7 +59,7 @@
         <div class="form-group">
           <label class="col-lg-3 control-label text-center">Nombre:</label>
           <div class="col-lg-8">
-            <input class="form-control" type="text" value="Jane">
+            <input class="form-control" type="text" [(ngModel)]="student.name">
           </div>
         </div>
         <div class="form-group">
