--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -11,7 +11,7 @@
   <tbody>
     <tr *ngFor="let analysis of rankingAnalises; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ analysis.id_student }}</td>
+      <td>{{ analysis.name }}</td>
       <td>{{ analysis.points }}</td>
     </tr>
   </tbody>
