--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -13,6 +13,7 @@
       <td>{{ i + 1 }}</td>
       <td>{{ analysis.name }}</td>
       <td>{{ analysis.points }}</td>
+      <td *ngIf="teacher"><button (click)="eliminarRegistro(analysis.id_student)">a</button></td>
     </tr>
   </tbody>
 </table>
