Fixed sidebar and styles

--- a/Angular/proyectoFinal/src/app/app.component.html
+++ b/Angular/proyectoFinal/src/app/app.component.html
@@ -1,9 +1,7 @@
-<nav *ngIf="showNavBar">
-  <div>
-    <app-sidebar></app-sidebar>
+<div *ngIf="showNavBar">
+  <app-sidebar></app-sidebar>
 </div>
-</nav>
+
 <div>
   <router-outlet></router-outlet>
 </div>
- 
