--- a/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.html
@@ -47,7 +47,7 @@
           <input class="input-text"  placeholder="Tu nickname" formControlName="nickname">
       </div>
       <div>
-          <label class="form-label" for="nickname">Correo electrónico *</label>
+          <label class="form-label" for="email">Correo electrónico *</label>
           <input class="input-text"  placeholder="name@ilerna.com" formControlName="email">
       </div>
       <div>
