--- a/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/register-page.component.css
@@ -62,11 +62,13 @@ input,
 .form-title {
 	font-size: 22px;
 	margin: 0 auto 5px;
+  color: white;
 }
 
 .form-subtitle {
 	font-size: 18px;
 	margin-block: 0;
+  color: white;
 }
 
 .benefits {
