--- a/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/register-page/student-form/student-form.component.css
@@ -95,10 +95,11 @@ input,
 	margin-bottom: 12px;
 	display: block;
 	font-weight: bold;
+  color: white;
 }
 
 .input-text {
-	background-color: lightgray;
+	background-color: #e8f0fe ;
     color: #0f0c29;
 	box-sizing: border-box;
 	padding: 15px 12px;
@@ -138,6 +139,7 @@ input,
 /* :: State :: */
 .highlighted {
 	font-weight: 600;
+  color: white;
 }
 
 /* :: Mediaqueries :: */
