--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -1,18 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; 	background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
-
+html {
+    width: 100%;
+    height: 100%;
+}
+body {
+    background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
     font-family: 'Nunito', sans-serif !important;
-    
-    color: white;}
-body { margin: 0;
-    font-family: 'Nunito', sans-serif !important;
-     }
-
-html, body { height: 100%; }
-body { margin: 0;  }
-
-body.mat-h1, .mat-headline, .mat-typography .mat-h1, .mat-typography .mat-headline, .mat-typography h1, .mat-h2, .mat-title, .mat-typography .mat-h2, .mat-typography .mat-title, .mat-typography h2 {
-    font-family: 'Nunito', sans-serif !important;
-  }
-
+}
