--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -13,7 +13,9 @@
       <td>{{ i + 1 }}</td>
       <td>{{ analysis.name }}</td>
       <td>{{ analysis.points }}</td>
-      <td *ngIf="teacher"><button (click)="eliminarRegistro(analysis.id_student)">a</button></td>
+      <td *ngIf="teacher"><button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button></td>
+
+      <td *ngIf="teacher"><input [(ngModel)]="new_points" name="new_points" type="number"><button (click)="editarPuntos(analysis.id_rank,analysis.id_student)">Editar</button></td>
     </tr>
   </tbody>
 </table>
