--- a/Angular/proyectoFinal/src/app/sidebar/sidebar.component.html
+++ b/Angular/proyectoFinal/src/app/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             <div class="logo-details">
               <i class='bx bxl-c-plus-plus icon'></i>
                 <div class="logo_name">Vortex Ed</div>
-                <!-- <i class='bx bx-menu' id="btn" (click)="toggleMenu()"></i> -->
+                 <i class='bx bx-menu' id="btn" (click)="toggleMenu()"></i> 
             </div>
             <ul class="nav-list">
               <li>
@@ -21,7 +21,7 @@
               </li>
 
               <li>
-               <a routerLink="/editstudentprofile">
+               <a routerLink="/studentProfile">
                  <i class='bx bx-user' ></i>
                  <span class="links_name">Tu perfil de usuario</span>
                </a>
