--- a/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/login-page/login-page.component.html
@@ -2,7 +2,8 @@
   <div class="page-content">
      <div class="form-v8-content">
       <div class="form-left">
-        <img src="https://i.imgur.com/asFm7OR.png" alt="form">
+        <!-- <img src="https://i.imgur.com/asFm7OR.png" alt="form"> -->
+        <img [src]="mostrarFormulario1 ? 'https://i.imgur.com/UU7iTUU.png' : 'https://i.imgur.com/VXmg3ld.png'" alt="form">
       </div>
       <div class="form-right">
         <div class="tab">
