--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -5,4 +5,5 @@ html {
 body {
     background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
     font-family: 'Nunito', sans-serif !important;
+    color:white ;
 }
