Styles teacher page

--- a/Angular/proyectoFinal/src/styles.css
+++ b/Angular/proyectoFinal/src/styles.css
@@ -6,4 +6,6 @@ body {
     background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
     font-family: 'Nunito', sans-serif !important;
     color:white ;
+    margin-left: 250px;
+
 }
