--- a/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
@@ -1,26 +1,38 @@
-        <a class="text-decoration-none text-info fw-semibold" [routerLink]="['/teacherProfile']"
-        routerLinkActive="router-link-active">Foto de perfil</a>
-        
-        
-        
-<h2>Listado de rankings</h2>
 
-<div class="list-group" *ngFor="let ranking of rankings" >
-
-<a class="list-group-item list-group-item-action"
-            [routerLink]="['/ranking', ranking.id]">{{ ranking.name }}</a>
-            <button (click)="eliminarRegistro(ranking.id)">Eliminar</button>
-</div>
-
-<h2>Crear un nuevo ranking</h2>
-
-<form (ngSubmit)="crearRanking()">
-  <div class="form-group">
-    <label for="nombreRanking">Nombre del ranking:</label>
-    <input type="text" class="form-control" id="nombreRanking" name="nombreRanking" [(ngModel)]="nombreRanking">
+    
+   
+  <div class="container text-center ">
+    <div class="row align-items-start">
+      <div class="col mt-3 mb-3">
+        <h2>Crear un nuevo ranking</h2>
+      </div>
+    </div>
+    <form (ngSubmit)="crearRanking()">
+      <div class="form-group">
+        <div class="row align-items-center">
+          <div class="col mt-1 mb-3">
+            <input placeholder="Nombre de tu nuevo ranking"type="text" class="form-control" id="nombreRanking" name="nombreRanking" [(ngModel)]="nombreRanking">
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Crear ranking</button>
+    </form>
+    <a class="text-decoration-none text-info fw-semibold" [routerLink]="['/teacherProfile']"
+    routerLinkActive="router-link-active">Ir a editar perfil de profesor</a>
   </div>
+  
+  <div class="container-fluid mt-5">
+    <div class="row ">
+      <div class="col text-center">
+        <h2>Listado de rankings</h2>
+      </div>
+    </div>
+    <div class="list-group" *ngFor="let ranking of rankings">
+      <a class="list-group-item list-group-item-action" [routerLink]="['/ranking', ranking.id]">{{ ranking.name }}</a>
+      <button (click)="eliminarRegistro(ranking.id)">Eliminar</button>
+    </div>
+  </div>
+ 
 
-  <button type="submit" class="btn btn-primary">Crear ranking</button>
-</form>
 
 <!-- <button mat-raised-button color="primary" (click)="openAddPracticeDialog()">Añadir práctica/entrega</button> -->
