Comienzo subir tarea como profesor

--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,6 +1,20 @@
 <h2 class="ranking-header">Ranking #{{ rankingId }}</h2>
 <div *ngIf="teacher && teacher.email !== ''">
-  <input type="text" name="name_practica" id="name_practica" [(ngModel)]="name_practica"><button (click)="nuevaPractica">Añadir nueva Tarea</button>
+
+  <button (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+</div>
+
+<div *ngIf="nuevaTarea">
+  <form>
+    <label>Nombre:</label>
+    <input type="text" name="tarea.nombre" id="tarea.nombre" [(ngModel)]="tarea.nombre"><br>
+    <label>Descripción:</label>
+    <textarea name="descripcion" id="descripcion" [(ngModel)]="tarea.descripcion"></textarea><br>
+    <label>Fecha límite:</label>
+    <input type="date" name="fecha" id="fecha" [(ngModel)]="tarea.fechaEntrega"><br>
+    <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
+    <button type="button" (click)="nuevaTarea = false">Cancelar</button>
+  </form>
 </div>
 
 <table class="ranking-table">
@@ -19,13 +33,10 @@
       <td *ngIf="teacher && teacher.email !== ''">
         <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
       </td>
-
-
       <td *ngIf="teacher && teacher.email !== ''">
-
         <input #newPoints name="new_points" type="number">
         <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
-       </td>
+      </td>
     </tr>
   </tbody>
 </table>
