--- a/Angular/proyectoFinal/src/app/sidebar/sidebar.component.html
+++ b/Angular/proyectoFinal/src/app/sidebar/sidebar.component.html
@@ -13,10 +13,16 @@
             </div>
             <ul class="nav-list">
               <li>
-               <a routerLink="/studentProfile">
+                
+               <a *ngIf="student && student.email !== ''" routerLink="/studentProfile">
                  <i class='bx bx-user' ></i>
                  <span class="links_name">Tu perfil de usuario</span>
                </a>
+
+               <a *ngIf="teacher && teacher.email !== ''" routerLink="/teacherProfile">
+                <i class='bx bx-user' ></i>
+                <span class="links_name">Tu perfil de usuario</span>
+              </a>
                <span class="tooltip">User</span>
              </li>
                <!-- <router-link to="/editstudentprofile" routerLinkActive="router-link-active">
@@ -51,20 +57,40 @@
                </a>
                <span class="tooltip">Setting</span>
              </li>
-             <li class="profile">
+             <li  *ngIf="student && student.email !== ''"  class="profile">
                  <div class="profile-details">
                   <a class="justlink"routerLink="/studentProfile">
-                   <img src="https://i.imgur.com/n6F53V0.jpg" alt="profileImg">
+                   <img src="{{student.img}}" alt="profileImg">
                    </a>
+
                    <div class="name_job">
-                     <div class="name">Valentí Casas</div>
-                     <div class="job">Profesor</div>
+                     <div class="name">{{student.nickname}}</div>
+                     <div class="job">Estudiante</div>
                    </div>
+
                  </div>
                  <a routerLink="/login">
                  <i class='bx bx-log-out' id="log_out" ></i>
                 </a>
              </li>
+
+
+             <li  *ngIf="teacher && teacher.email !== ''"  class="profile">
+              <div class="profile-details">
+               <a class="justlink"routerLink="/teacherProfile">
+                <img src="{{teacher.img}}" alt="profileImg">
+                </a>
+
+                <div  *ngIf="teacher && teacher.email !== ''" class="name_job">
+                  <div class="name">{{teacher.nickname}}</div>
+                  <div class="job">Profesor</div>
+                </div>
+
+              </div>
+              <a routerLink="/login">
+              <i class='bx bx-log-out' id="log_out" ></i>
+             </a>
+          </li>
             </ul>
           </div>
         <!-- <section class="home-section">
