fixing margins and sidebar

--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.css
@@ -41,7 +41,7 @@
     } */
 
     .container {
-        margin-left: 250px;
+        /* margin-left: 250px; */
     }
     .edit-profile{
         /* display: flex; */
