--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -90,10 +90,10 @@
     height: 21rem !important; */
   }
 
-  .limitsContainer {
-    margin-left: 250px;
-    /* background-image: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%) !important; */
-  }
+  /* .limitsContainer {
+     margin-left: 250px; 
+     background-image: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%) !important; 
+  } */
 
    .row .col-md-8{
     margin-left: 15.62rem;
