--- a/Angular/proyectoFinal/src/app/sidebar/sidebar.component.css
+++ b/Angular/proyectoFinal/src/app/sidebar/sidebar.component.css
@@ -213,6 +213,7 @@
   font-weight: 400;
   color: #fff;
   white-space: nowrap;
+  margin-left: 2rem;
 }
 .sidebar li.profile .job{
   font-size: 12px;
