--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,7 +1,33 @@
 <h2 class="ranking-header">Ranking #{{ rankingName }}</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Descripción</th>
+      <th>Puntos</th>
+      <th>Fecha límite</th>
+      <th>Entregar archivo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let practica of practicas">
+      <td>{{ practica.name }}</td>
+      <td>{{ practica.description }}</td>
+      <td>{{ practica.points_practice }}</td>
+      <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
+      <td>
+        <input type="file" (change)="onFileSelected($event, practica.id)">
+        <button (click)="uploadFile(practica.id)">Subir</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
+
 <div *ngIf="teacher && teacher.email !== ''">
 
-    info
+   
 
 
   <button (click)="nuevaTarea = true">Añadir nueva Tarea</button>
@@ -10,11 +36,11 @@
 <div *ngIf="nuevaTarea">
   <form>
     <label>Nombre:</label>
-    <input type="text" name="tarea.nombre" id="tarea.nombre" [(ngModel)]="tarea.nombre"><br>
+    <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
     <label>Descripción:</label>
-    <textarea name="descripcion" id="descripcion" [(ngModel)]="tarea.descripcion"></textarea><br>
+    <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
     <label>Fecha límite:</label>
-    <input type="date" name="fecha" id="fecha" [(ngModel)]="tarea.fechaEntrega"><br>
+    <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
     <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
     <button type="button" (click)="nuevaTarea = false">Cancelar</button>
   </form>
