--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,84 +1,112 @@
-<h2 class="ranking-header">Ranking #{{ rankingName }}</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Descripción</th>
-      <th>Puntos</th>
-      <th>Fecha límite</th>
-      <th>Entregar archivo</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let practica of practicas">
-      <td>{{ practica.name }}</td>
-      <td>{{ practica.description }}</td>
-      <td>{{ practica.points_practice }}</td>
-      <td>{{ practica.deadline_practice | date:'shortDate' }}</td>
-      <td>
-        <input type="file" (change)="onFileSelected($event,practica.id)" />
-        <button (click)="uploadFile(practica.id)">Subir</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="containermain">
+  <h2 class="ranking-header">Ranking {{ rankingName }}</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Descripción</th>
+          <th>Puntos</th>
+          <th>Fecha límite</th>
+          <th>Entregar archivo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let practica of practicas">
+          <td>{{ practica.name }}</td>
+          <td>{{ practica.description }}</td>
+          <td>{{ practica.points_practice }}</td>
+          <td>{{ practica.deadline_practice | date : "shortDate" }}</td>
+          <td>
+            <input type="file" (change)="onFileSelected($event, practica.id)" />
+            <button (click)="uploadFile(practica.id)">Subir</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
+  <div *ngIf="teacher && teacher.email !== ''">
+    <ul>
+      <li *ngFor="let practice of practicesDelivered">
+        <span>{{ practice.student_name }}</span>
+        <span>{{ practice.student_surname }}</span>
+        <span>{{ practice.practice_name }}</span>
+      </li>
+    </ul>
 
+    <button (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+  </div>
 
+  <div *ngIf="nuevaTarea">
+    <form>
+      <label>Nombre:</label>
+      <input
+        type="text"
+        name="tarea.name"
+        id="tarea.name"
+        [(ngModel)]="tarea.name"
+      /><br />
+      <label>Descripción:</label>
+      <textarea
+        name="description"
+        id="description"
+        [(ngModel)]="tarea.description"
+      ></textarea
+      ><br />
+      <label>Fecha límite:</label>
+      <input
+        type="date"
+        name="deadline_practice"
+        id="deadline_practice"
+        [(ngModel)]="tarea.deadline_practice"
+      /><br />
+      <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
+      <button type="button" (click)="nuevaTarea = false">Cancelar</button>
+    </form>
+  </div>
 
-<div *ngIf="teacher && teacher.email !== ''">
-  <ul>
-    <li *ngFor="let practice of practicesDelivered">
-      <span>{{ practice.student_name }}</span>
-      <span>{{ practice.student_surname }}</span>
-      <span>{{ practice.practice_name }}</span>
-    </li>
-  </ul>
+  <div class="tablabasicarank">
+    <table *ngIf="!nuevaTarea" class="ranking-table">
+      <thead>
+        <tr>
+          <th>Posición</th>
+          <th>Nombre</th>
+          <th>Puntuación</th>
+        </tr>
+      </thead>
+      
 
-
-
-
-  <button (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+      <tbody>
+        <tr *ngFor="let analysis of rankingAnalises; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>{{ analysis.name }}</td>
+          <td>{{ analysis.points }}</td>
+          <td *ngIf="teacher && teacher.email !== ''">
+            <button
+              (click)="eliminarRegistro(analysis.id_rank, analysis.id_student)"
+            >
+              Eliminar
+            </button>
+          </td>
+          <td *ngIf="teacher && teacher.email !== ''">
+            <input #newPoints name="new_points" type="number" />
+            <button
+              (click)="
+                editarPuntos(
+                  analysis.id_rank,
+                  analysis.id_student,
+                  +newPoints.value
+                )
+              "
+            >
+              Editar
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
+  <div *ngIf="!rankingAnalises" class="error-message">
+    No se encontraron datos del ranking.
+  </div>
 </div>
-
-<div *ngIf="nuevaTarea">
-  <form>
-    <label>Nombre:</label>
-    <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
-    <label>Descripción:</label>
-    <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
-    <label>Fecha límite:</label>
-    <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
-    <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
-    <button type="button" (click)="nuevaTarea = false">Cancelar</button>
-  </form>
-</div>
-
-<table *ngIf="!nuevaTarea" class="ranking-table">
-  <thead>
-    <tr>
-      <th>Posición</th>
-      <th>Nombre</th>
-      <th>Puntuación</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let analysis of rankingAnalises; let i = index">
-      <td>{{ i + 1 }}</td>
-      <td>{{ analysis.name }}</td>
-      <td>{{ analysis.points }}</td>
-      <td *ngIf="teacher && teacher.email !== ''">
-        <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
-      </td>
-      <td *ngIf="teacher && teacher.email !== ''">
-        <input #newPoints name="new_points" type="number">
-        <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-
-
-<div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
-<div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
