--- a/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.html
@@ -29,6 +29,7 @@
     </div>
     <div class="list-group" *ngFor="let ranking of rankings">
       <a class="list-group-item list-group-item-action" [routerLink]="['/ranking', ranking.id]">{{ ranking.name }}</a>
+      <p>{{ranking.cod_room}}</p>
       <button (click)="eliminarRegistro(ranking.id)">Eliminar</button>
     </div>
   </div>
