--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -107,50 +107,13 @@ h2{
     margin:1rem auto;
   }
   
-  /* .btn {
-    cursor: pointer;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
-    transition: background-color 0.3s ease;
-    display: block;
-    margin: 0 auto;
-  }
-  
-  .btn:hover {
-    background-color: #0062cc;
-  } */
   .img, svg{
     width: 2rem !important; 
     height: 2rem !important;
   }
-  .limitsContainer{
-    margin: 0 auto;
-    margin-left: 0px;
-  }
-
- .ranking-container .roboimage img  , svg{
-    /* display: block;
-    margin: 0 auto;
-    width: 30rem !important;
-    height: 21rem !important; */
-  }
-
-  /* .limitsContainer {
-     margin-left: 250px; 
-     background-image: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%) !important; 
-  } */
-
-   .row .col-md-8{
-    margin-left: 15.62rem;
-    margin-top: 5rem;
-  } 
 
   /* content no ranking */
-
+/* boton */
   .neon {
     width: -webkit-fill-available;
     height: 60px;
