--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,6 +1,6 @@
 
   <h2 class="ranking-header">Ranking #{{ rankingName }}</h2>
-  <table *ngIf="practicas == null">
+  <table >
     <thead>
       <tr>
         <th>Nombre</th>
